# Desktobian

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml
crates/desktobian-core/: Cargo.toml
crates/desktobian-core/src/: config.rs  ipc.rs  lib.rs  source.rs  webprops.rs
crates/desktobian-gui/: Cargo.toml  README.md  tauri.conf.json
crates/desktobian-gui/capabilities/: default.json
crates/desktobian-gui/frontend/: index.html  main.js  props.js  styles.css
crates/desktobian-gui/src/: apply.rs  env.rs  library.rs  main.rs
examples/: config.toml
kde/: README.md  desktobian-webserver.py  enable-web.sh  install.sh
kde/org.desktobian.video/contents/ui/: config.qml  main.qml
kde/plasma5/org.desktobian.video/: metadata.desktop
kde/plasma5/org.desktobian.video/contents/config/: main.xml
kde/plasma5/org.desktobian.video/contents/ui/: WebWallpaper.qml  config.qml  main.qml  we-api-shim.js  we-properties.js
kde/plasma6/org.desktobian.video/: metadata.json
kde/plasma6/org.desktobian.video/contents/config/: main.xml
kde/plasma6/org.desktobian.video/contents/ui/: WebWallpaper.qml  config.qml  main.qml  we-api-shim.js
packaging/: desktobian.desktop  desktobian.service
src/: app.rs  cli.rs  error.rs  ipc.rs  logging.rs  main.rs  monitor.rs  util.rs
src/backend/: mod.rs  wayland.rs  x11.rs
src/player/: ffi.rs  mod.rs  mpv.rs
src/render/: egl.rs  mod.rs
