[package]
name = "desktobian-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Shared core for Desktobian: config, source resolution, monitors, and the control-IPC protocol/client."
license = "Apache-2.0"
repository = "https://github.com/psychofit/desktobian"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
directories = "5"
libc = "0.2"
log = "0.4"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
