[package]
name = "desktobian-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Desktobian wallpaper manager — a Tauri GUI to browse and apply wallpapers."
license = "Apache-2.0"
repository = "https://github.com/psychofit/desktobian"

[[bin]]
name = "desktobian-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
desktobian-core = { path = "../desktobian-core" }
directories = "5"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
